--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    
+    <div>
+        <input class="insertmail" type="text">
+        <button class="btn">verifica</button>
+    </div>
 </body>
 </html>
