--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,15 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
+    <!-- email -->
     <div>
-        <input class="insertmail" type="text">
+        <input class="insertmail" type="text" placeholder="Inserisci la tua email">
         <button class="btn">verifica</button>
+    </div>
+
+    <!-- dadi -->
+    <div class="container-dadi">
+        <button class="btn-dadi">Lancia i dadi</button>
     </div>
 </body>
 </html>
