inserito stile minimale

--- a/index.html
+++ b/index.html
@@ -9,14 +9,20 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    <!-- email -->
-    <div>
-        <input class="insertmail" type="text" placeholder="Inserisci la tua email">
-        <button class="btn">verifica</button>
+    <div class="container container-mail">
+        <div class="mail-flex">
+            <h1>VERIFICA LA TUA EMAIL</h1>
+            <input class="insertmail" type="text" placeholder="Inserisci la tua email">
+            <button class="btn">VERIFICA</button>
+        </div>
     </div>
 
     <!-- dadi -->
-    <div class="container-dadi">
+    <div class="container-dadi container">
+        <div>
+            <span class="number"></span>
+            <!-- <p class="number"></p> -->
+        </div>
         <button class="btn-dadi">Lancia i dadi</button>
     </div>
 </body>
